src/objects/Apttus_Proposal__Proposal_Request__c.object
<CustomObject>
    <description>Approval requests for a proposal</description>
    <fields>
        <fullName>Apttus_Proposal__Approval_Action__c</fullName>
        <formula>HYPERLINK(Apttus_Proposal__s_Servlet_Directory__c&amp;&quot;01N700000009u2a&amp;eid=&quot;&amp;Id, IMAGE(Apttus_Proposal__s_Document_Directory__c&amp;&quot;01570000000e6nT&quot;, &quot;Approve&quot;) ) &amp; HYPERLINK(Apttus_Proposal__s_Servlet_Directory__c&amp;&quot;01N700000009u2o&amp;eid=&quot;&amp;Id, IMAGE(Apttus_Proposal__s_Document_Directory__c&amp;&quot;01570000000e6nR&quot;, &quot;Reject&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>R00N70000001yUfJEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Requested_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Result_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Result Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Add&apos;l Info Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved / Denied By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001yUfGEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__s_Document_Directory__c</fullName>
        <formula>&quot;/servlet/servlet.FileDownload?file=&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>s_Document Directory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__s_Servlet_Directory__c</fullName>
        <description>Stores the servlet location which is substituted in formula fields.</description>
        <formula>&quot;/servlet/servlet.Integration?lid=&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>s_Servlet Directory</label>
        <type>Text</type>
    </fields>
    <label>Proposal Request</label>
    <listViews>
        <fullName>Apttus_Proposal__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>